TSP-308: fix for subscription on other user (#77)
TSP-308: subscription on another user